@@ -1,3 +1,8 @@
+Fri Jul  8 16:39:03 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/json/parser/parser.rl (convert_encoding): no needs to use
+	  force_encoding.
+
 Fri Jul  8 15:53:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* error.c (rb_bug): get rid of segfault after all threads
